--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Spelling Corrector</title>
 		<link rel="stylesheet" href="styles.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="jquery-1.9.1.min.js"></script>
 		<script src="scripts.js"></script>
 	<head>
 	
